导航栏优化

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div id="siteWelcome" class="siteWelcome active">
 		<div class="loading"></div>
 	</div>
-	<div class="topNavBar">
+	<div id="topNavBar" class="topNavBar">
 		<div class="topNavBar-inner clearfix">
 			<a class="logo" href="#" alt="logo">
 				<span class="rs">RS</span><span class="card">card</span>
@@ -248,7 +248,15 @@
 	<script>
 		setTimeout(function(){
 			siteWelcome.classList.remove("active")
-		},2500)
+		},1500)
+
+		window.onscroll = function(){
+			if (window.scrollY > 0) {
+				topNavBar.classList.add("sticky")
+			}else {
+				topNavBar.classList.remove("sticky")
+			}
+		}
 	</script>
 </body>
 
