--- a/index.html
+++ b/index.html
@@ -2,262 +2,282 @@
 <html>
 
 <head>
-	<title>王峥的个人简历</title>
-	<link rel="stylesheet" href="./main.css">
-	<script src="//at.alicdn.com/t/font_584946_dxln77t6o7sqbyb9.js"></script>
-	<style>
-	.loading:before,
-	.loading:after
-	{
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-
-		width: 0;
-		height: 0;
-		margin: auto;
-
-		content: '';
-		animation: ripple 1.6s linear infinite;
-
-		border-radius: 50%;
-		background: #3d4451;
-	}
-
-	.loading:after
-	{
-		animation-delay: .8s;
-	}
-
-	@keyframes ripple
-	{
-		0%
-		{
-			width: 0;
-			height: 0;
-
-			opacity: 1;
-		}
-		100%
-		{
-			width: 70px;
-			height: 70px;
-
-			opacity: 0;
-		}
-	}
-
-</style>
+    <title>王峥的个人简历</title>
+    <link rel="stylesheet" href="./main.css">
+    <script src="//at.alicdn.com/t/font_584946_dxln77t6o7sqbyb9.js"></script>
+    <style>
+        .loading:before,
+        .loading:after {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 0;
+            margin: auto;
+            content: '';
+            animation: ripple 1.6s linear infinite;
+            border-radius: 50%;
+            background: #3d4451;
+        }
+        
+        .loading:after {
+            animation-delay: .8s;
+        }
+        
+        @keyframes ripple {
+            0% {
+                width: 0;
+                height: 0;
+                opacity: 1;
+            }
+            100% {
+                width: 70px;
+                height: 70px;
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
-	<div id="siteWelcome" class="siteWelcome active">
-		<div class="loading"></div>
-	</div>
-	<div id="topNavBar" class="topNavBar">
-		<div class="topNavBar-inner clearfix">
-			<a class="logo" href="#" alt="logo">
-				<span class="rs">RS</span><span class="card">card</span>
-			</a>
-			<nav>
-				<ul class="clearfix">
-					<li>
-						<a href="#">关于</a>
-					</li>
-					<li>
-						<a href="#">技能</a>
-					</li>
-					<li>
-						<a href="#">作品</a>
-					</li>
-					<li>
-						<a href="#">博客</a>
-					</li>
-					<li>
-						<a href="#">日历</a>
-					</li>
-					<li>
-						<a href="#">联系方式</a>
-					</li>
-					<li>
-						<a href="#">其他</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</div>
-	<div class="banner">
-		<div class="mask"></div>
-	</div>
-	<main>
-		<div class="userCard">
-			<div class="pictureAndText clearfix">
-				<div class="picture">
-					<img src="./img/avatar.jpg" alt="头像">
-				</div>
-				<div class="text">
-					<div class="profile">
-						<span class="welcome">Hello
+    <div id="siteWelcome" class="siteWelcome active">
+        <div class="loading"></div>
+    </div>
+    <div id="topNavBar" class="topNavBar">
+        <div class="topNavBar-inner clearfix">
+            <a class="logo" href="#" alt="logo">
+                <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav class="menu">
+                <ul class="clearfix">
+                    <li>
+                        <a href="#siteAbout">关于</a>
+                    </li>
+                    <li>
+                        <a href="#siteSkill">技能</a>
+                    </li>
+                    <li>
+                        <a href="#siteWorks">作品</a>
+                        <ul class="submenu">
+                            <li><a href="">作品1</a></li>
+                            <li><a href="">作品2</a></li>
+                            <li><a href="">作品3</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">博客</a>
+                        <ul class="submenu">
+                            <li><a href="http://varonia.github.io" target="_blank">Hexo博客</a></li>
+                            <li><a href="https://www.jianshu.com/u/f568fe8744a8" target="_blank">简书</a></li>
+                            <li><a href="https://github.com/Varonia" target="_blank">Github</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">日历</a>
+                    </li>
+                    <li>
+                        <a href="#">联系方式</a>
+                    </li>
+                    <li>
+                        <a href="#">其他</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="banner">
+        <div class="mask"></div>
+    </div>
+    <main>
+        <div id="siteAbout" class="userCard">
+            <div class="pictureAndText clearfix">
+                <div class="picture">
+                    <img src="./img/avatar.jpg" alt="头像">
+                </div>
+                <div class="text">
+                    <div class="profile">
+                        <span class="welcome">Hello
 							<span class="triangle"></span>
-						</span>
-						<h1>王峥</h1>
-						<p>前端开发工程师</p>
-						<hr>
-						<dl>
-							<dt>年龄</dt>
-							<dd>26</dd>
-							<dt>所在城市</dt>
-							<dd>北京</dd>
-							<dt>邮箱</dt>
-							<dd>w87344666@gmail.com</dd>
-							<dt>手机</dt>
-							<dd>18222374657</dd>
-						</dl>
-					</div>
-				</div>
-			</div>
-			<footer class="media">
-				<a href="#">
-					<svg class="icon" aria-hidden="true">
+                        </span>
+                        <h1>王峥</h1>
+                        <p>前端开发工程师</p>
+                        <hr>
+                        <dl>
+                            <dt>年龄</dt>
+                            <dd>26</dd>
+                            <dt>所在城市</dt>
+                            <dd>北京</dd>
+                            <dt>邮箱</dt>
+                            <dd>w87344666@gmail.com</dd>
+                            <dt>手机</dt>
+                            <dd>18222374657</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+            <footer class="media">
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
 						<use xlink:href="#icon-hexo"></use>
 					</svg>
-				</a>
-				<a href="#">
-					<svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
 						<use xlink:href="#icon-github"></use>
 					</svg>
-				</a>
-				<a href="#">
-					<svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
 						<use xlink:href="#icon-weibo1"></use>
 					</svg>
-				</a>
-				<a href="#">
-					<svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
 						<use xlink:href="#icon-zhihu0"></use>
 					</svg>
-				</a>
-				<a href="#">
-					<svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
 						<use xlink:href="#icon-twitter"></use>
 					</svg>
-				</a>								
-			</footer>
-		</div>
-		<p class="downloadResume-wrapper">
-			<a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
-		</p>		
-		<p class="intro">
-			王峥， 前端工程师。<br> 
-			技能：前端开发，Vue 开发，Node.js 开发
-		</p>
+                </a>
+            </footer>
+        </div>
+        <p class="downloadResume-wrapper">
+            <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
+        </p>
+        <p class="intro">
+            王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
+        </p>
 
-	</main>
-	<section class="skills">
-		<h2>技能</h2>
-		<ol class="clearfix">
-			<li>
-				<h3>
-					HTML 5 &amp; CSS 3
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 60%;"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					JavaScript
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 50%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					jQuery
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 60%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					Vue.js
-				</h3>
-				<div class="progressBar">
-					<div class="progress" style="width: 40%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					React.js
-				</h3>
-				<div class="progressBar">
-					<div class="progress"  style="width: 50%"></div>
-				</div>
-			</li>
-			<li>
-				<h3>
-					Node.js
-				</h3>
-				<div class="progressBar">
-					<div class="progress"  style="width: 60%"></div>
-				</div>
-			</li>
-		</ol>
-	</section>
-	<section class="portfolio">
-		<h2>作品集</h2>
-		<nav>
-			<ol class="clearfix">
-				<li id="portfolio1">所有</li>
-				<li id="portfolio2">框架</li>
-				<li id="portfolio3">原生JS&amp;CSS</li>
-			</ol>
-			<div id="portfolioBar" class="bar state-1">
-				<div class="bar-inner"></div>
-			</div>
-		</nav>
-		<script>
-			portfolio1.onclick= function(){
-				portfolioBar.className = 'bar state-1'
-			}
-			portfolio2.onclick= function(){
-				portfolioBar.className = 'bar state-2'
-			}
-			portfolio3.onclick= function(){
-				portfolioBar.className = 'bar state-3'
-			}
-		</script>
+    </main>
+    <section id="siteSkill" class="skills">
+        <h2>技能</h2>
+        <ol class="clearfix">
+            <li>
+                <h3>
+                    HTML 5 &amp; CSS 3
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    JavaScript
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 50%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    jQuery
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Vue.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 40%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    React.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 50%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Node.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%"></div>
+                </div>
+            </li>
+        </ol>
+    </section>
+    <section id="siteWorks" class="portfolio">
+        <h2>作品集</h2>
+        <nav>
+            <ol class="clearfix">
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生JS&amp;CSS</li>
+            </ol>
+            <div id="portfolioBar" class="bar state-1">
+                <div class="bar-inner"></div>
+            </div>
+        </nav>
+        <script>
+            portfolio1.onclick = function() {
+                portfolioBar.className = 'bar state-1'
+            }
+            portfolio2.onclick = function() {
+                portfolioBar.className = 'bar state-2'
+            }
+            portfolio3.onclick = function() {
+                portfolioBar.className = 'bar state-3'
+            }
+        </script>
 
-		<div class="works" style="height: 576px;">
-			<div class="big" style="top: 0; left: 10px;">
-				<img src="./img/1.jpg" alt="作品1">
-			</div>
-			<div class="small" style="top: 0; left: 635px;">
-				<img src="./img/2.jpg" alt="作品2">
-			</div>
-			<div class="small" style="top: 298px; left: 635px;">
-				<img src="./img/3.jpg" alt="作品3">
-			</div>
-		</div>
+        <div class="works" style="height: 576px;">
+            <div class="big" style="top: 0; left: 10px;">
+                <img src="./img/1.jpg" alt="作品1">
+            </div>
+            <div class="small" style="top: 0; left: 635px;">
+                <img src="./img/2.jpg" alt="作品2">
+            </div>
+            <div class="small" style="top: 298px; left: 635px;">
+                <img src="./img/3.jpg" alt="作品3">
+            </div>
+        </div>
 
-	</section>
-	<script>
-		setTimeout(function(){
-			siteWelcome.classList.remove("active")
-		},1500)
+    </section>
+    <script>
+        setTimeout(function() {
+            siteWelcome.classList.remove("active")
+        }, 1500)
 
-		window.onscroll = function(){
-			if (window.scrollY > 0) {
-				topNavBar.classList.add("sticky")
-			}else {
-				topNavBar.classList.remove("sticky")
-			}
-		}
-	</script>
+        window.onscroll = function() {
+            if (window.scrollY > 0) {
+                topNavBar.classList.add("sticky")
+            } else {
+                topNavBar.classList.remove("sticky")
+            }
+        }
+
+        let liTags = document.querySelectorAll('nav.menu > ul >li')
+        for (let i = 0; i < liTags.length; i++) {
+            liTags[i].onmouseenter = function(x) {
+                x.currentTarget.classList.add('active')
+            }
+            liTags[i].onmouseleave = function(x) {
+                x.currentTarget.classList.remove('active')
+            }
+        }
+
+        let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+        for (let i = 0; i < aTags.length; i++) {
+            aTags[i].onclick = function(x) {
+                x.preventDefault()
+                let a = x.currentTarget
+                let href = a.getAttribute('href') //'#siteAbout'
+                let element = document.querySelector(href)
+                let top = element.offsetTop
+                window.scrollTo(0, top - 80)
+            }
+        }
+    </script>
 </body>
 
 </html>
