--- a/index.html
+++ b/index.html
@@ -3,50 +3,13 @@
 
 <head>
     <title>王峥的个人简历</title>
-    <link rel="stylesheet" href="./main.css">
     <script src="//at.alicdn.com/t/font_584946_dxln77t6o7sqbyb9.js"></script>
-    <style>
-        /*加载动画css*/
-        /*	.loading:before,
-	.loading:after {
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		width: 0;
-		height: 0;
-		margin: auto;
-		content: '';
-		animation: ripple 1.6s linear infinite;
-		border-radius: 50%;
-		background: #3d4451;
-	}
-
-	.loading:after {
-		animation-delay: .8s;
-	}
-
-	@keyframes ripple {
-		0% {
-			width: 0;
-			height: 0;
-			opacity: 1;
-		}
-		100% {
-			width: 70px;
-			height: 70px;
-			opacity: 0;
-		}
-		}*/
-    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/js/swiper.min.js"></script>
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/css/swiper.min.css">
 </head>
 
 <body>
-    <!-- 加载动画 -->
-    <!--     <div id="siteWelcome" class="siteWelcome active">
-        <div class="loading"></div>
-    </div> -->
     <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a class="logo" href="#" alt="logo">
@@ -101,152 +64,133 @@
                 <div class="text">
                     <div class="profile">
                         <span class="welcome">Hello
-    						<span class="triangle"></span>
-                        </span>
-                        <h1>王峥</h1>
-                        <p>前端开发工程师</p>
-                        <hr>
-                        <dl>
-                            <dt>年龄</dt>
-                            <dd>26</dd>
-                            <dt>所在城市</dt>
-                            <dd>北京</dd>
-                            <dt>邮箱</dt>
-                            <dd>w87344666@gmail.com</dd>
-                            <dt>手机</dt>
-                            <dd>18222374657</dd>
-                        </dl>
-                    </div>
+                          <span class="triangle"></span>
+                      </span>
+                      <h1>王峥</h1>
+                      <p>前端开发工程师</p>
+                      <hr>
+                      <dl>
+                        <dt>年龄</dt>
+                        <dd>26</dd>
+                        <dt>所在城市</dt>
+                        <dd>北京</dd>
+                        <dt>邮箱</dt>
+                        <dd>w87344666@gmail.com</dd>
+                        <dt>手机</dt>
+                        <dd>18222374657</dd>
+                    </dl>
                 </div>
-            </div>
-            <footer class="media">
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-    					<use xlink:href="#icon-hexo"></use>
-    				</svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-    					<use xlink:href="#icon-github"></use>
-    				</svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-    					<use xlink:href="#icon-weibo1"></use>
-    				</svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-    					<use xlink:href="#icon-zhihu0"></use>
-    				</svg>
-                </a>
-                <a href="#">
-                    <svg class="icon" aria-hidden="true">
-    					<use xlink:href="#icon-twitter"></use>
-    				</svg>
-                </a>
-            </footer>
-        </div>
-        <p class="downloadResume-wrapper">
-            <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
-        </p>
-        <p class="intro">
-            王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
-        </p>
-
-    </main>
-    <section data-x id="siteSkill" class="skills">
-        <h2>技能</h2>
-        <ol class="clearfix">
-            <li>
-                <h3>
-                    HTML 5 &amp; CSS 3
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%;"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    JavaScript
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 50%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    jQuery
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    Vue.js
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 40%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    React.js
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 50%"></div>
-                </div>
-            </li>
-            <li>
-                <h3>
-                    Node.js
-                </h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%"></div>
-                </div>
-            </li>
-        </ol>
-    </section>
-    <section data-x id="siteWorks" class="portfolio">
-        <h2>作品集</h2>
-        <nav>
-            <ol class="clearfix">
-                <li id="portfolio1">所有</li>
-                <li id="portfolio2">框架</li>
-                <li id="portfolio3">原生JS&amp;CSS</li>
-            </ol>
-            <div id="portfolioBar" class="bar state-1">
-                <div class="bar-inner"></div>
-            </div>
-        </nav>
-        <script>
-            portfolio1.onclick = function() {
-                portfolioBar.className = 'bar state-1'
-            }
-            portfolio2.onclick = function() {
-                portfolioBar.className = 'bar state-2'
-            }
-            portfolio3.onclick = function() {
-                portfolioBar.className = 'bar state-3'
-            }
-        </script>
-
-        <div class="works" style="height: 576px;">
-            <div class="big" style="top: 0; left: 10px;">
-                <img src="./img/1.jpg" alt="作品1">
-            </div>
-            <div class="small" style="top: 0; left: 635px;">
-                <img src="./img/2.jpg" alt="作品2">
-            </div>
-            <div class="small" style="top: 298px; left: 635px;">
-                <img src="./img/3.jpg" alt="作品3">
             </div>
         </div>
+        <footer class="media">
+            <a href="#">
+                <svg class="icon" aria-hidden="true">
+                   <use xlink:href="#icon-hexo"></use>
+               </svg>
+           </a>
+           <a href="#">
+            <svg class="icon" aria-hidden="true">
+               <use xlink:href="#icon-github"></use>
+           </svg>
+       </a>
+       <a href="#">
+        <svg class="icon" aria-hidden="true">
+           <use xlink:href="#icon-weibo1"></use>
+       </svg>
+   </a>
+   <a href="#">
+    <svg class="icon" aria-hidden="true">
+       <use xlink:href="#icon-zhihu0"></use>
+   </svg>
+</a>
+<a href="#">
+    <svg class="icon" aria-hidden="true">
+       <use xlink:href="#icon-twitter"></use>
+   </svg>
+</a>
+</footer>
+</div>
+<p class="downloadResume-wrapper">
+    <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
+</p>
+<p class="intro">
+    王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
+</p>
 
-    </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
-    <script>
+</main>
+<section data-x id="siteSkill" class="skills">
+    <h2>技能</h2>
+    <ol class="clearfix">
+        <li>
+            <h3>
+                HTML 5 &amp; CSS 3
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 60%;"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                JavaScript
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 50%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                jQuery
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 60%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                Vue.js
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 40%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                React.js
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 50%"></div>
+            </div>
+        </li>
+        <li>
+            <h3>
+                Node.js
+            </h3>
+            <div class="progressBar">
+                <div class="progress" style="width: 60%"></div>
+            </div>
+        </li>
+    </ol>
+</section>
+<section data-x id="siteWorks" class="portfolio">
+    <h2>作品集</h2>
+    <div id="mySlides">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <img src="/img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
+                <img src="/img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
+                <img src="/img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
+            </div>
+            <!-- 如果需要分页器 -->
+            <div class="swiper-pagination"></div>
+        </div>
+            <!-- 如果需要导航按钮 -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+    </div>
+</section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
+<script src="./js/init-swiper.js"></script>
+<script>
         // 加载动画用
         // setTimeout(function() {
         // 	siteWelcome.classList.remove("active")
@@ -319,8 +263,8 @@
                     t = 500
                 }
                 var tween = new TWEEN.Tween(coords) // 起始位置
-                    .to({
-                        y: targetTop
+                .to({
+                    y: targetTop
                     }, t) // 结束位置 和 时间
                     .easing(TWEEN.Easing.Cubic.InOut) // 缓动类型
                     .onUpdate(function() {
@@ -328,9 +272,9 @@
                         window.scrollTo(0, coords.y) // 如何更新界面
                     })
                     .start(); // 开始缓动
+                }
             }
-        }
-    </script>
-</body>
+        </script>
+    </body>
 
-</html>
+    </html>
