--- a/index.html
+++ b/index.html
@@ -65,216 +65,134 @@
                     <div class="profile">
                         <span class="welcome">Hello
                           <span class="triangle"></span>
-                      </span>
-                      <h1>王峥</h1>
-                      <p>前端开发工程师</p>
-                      <hr>
-                      <dl>
-                        <dt>年龄</dt>
-                        <dd>26</dd>
-                        <dt>所在城市</dt>
-                        <dd>北京</dd>
-                        <dt>邮箱</dt>
-                        <dd>w87344666@gmail.com</dd>
-                        <dt>手机</dt>
-                        <dd>18222374657</dd>
-                    </dl>
+                        </span>
+                        <h1>王峥</h1>
+                        <p>前端开发工程师</p>
+                        <hr>
+                        <dl>
+                            <dt>年龄</dt>
+                            <dd>26</dd>
+                            <dt>所在城市</dt>
+                            <dd>北京</dd>
+                            <dt>邮箱</dt>
+                            <dd>w87344666@gmail.com</dd>
+                            <dt>手机</dt>
+                            <dd>18222374657</dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
-        </div>
-        <footer class="media">
-            <a href="#">
-                <svg class="icon" aria-hidden="true">
+            <footer class="media">
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
                    <use xlink:href="#icon-hexo"></use>
                </svg>
-           </a>
-           <a href="#">
-            <svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
                <use xlink:href="#icon-github"></use>
            </svg>
-       </a>
-       <a href="#">
-        <svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
            <use xlink:href="#icon-weibo1"></use>
        </svg>
-   </a>
-   <a href="#">
-    <svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
        <use xlink:href="#icon-zhihu0"></use>
    </svg>
-</a>
-<a href="#">
-    <svg class="icon" aria-hidden="true">
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
        <use xlink:href="#icon-twitter"></use>
    </svg>
-</a>
-</footer>
-</div>
-<p class="downloadResume-wrapper">
-    <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
-</p>
-<p class="intro">
-    王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
-</p>
-
-</main>
-<section data-x id="siteSkill" class="skills">
-    <h2>技能</h2>
-    <ol class="clearfix">
-        <li>
-            <h3>
-                HTML 5 &amp; CSS 3
-            </h3>
-            <div class="progressBar">
-                <div class="progress" style="width: 60%;"></div>
-            </div>
-        </li>
-        <li>
-            <h3>
-                JavaScript
-            </h3>
-            <div class="progressBar">
-                <div class="progress" style="width: 50%"></div>
-            </div>
-        </li>
-        <li>
-            <h3>
-                jQuery
-            </h3>
-            <div class="progressBar">
-                <div class="progress" style="width: 60%"></div>
-            </div>
-        </li>
-        <li>
-            <h3>
-                Vue.js
-            </h3>
-            <div class="progressBar">
-                <div class="progress" style="width: 40%"></div>
-            </div>
-        </li>
-        <li>
-            <h3>
-                React.js
-            </h3>
-            <div class="progressBar">
-                <div class="progress" style="width: 50%"></div>
-            </div>
-        </li>
-        <li>
-            <h3>
-                Node.js
-            </h3>
-            <div class="progressBar">
-                <div class="progress" style="width: 60%"></div>
-            </div>
-        </li>
-    </ol>
-</section>
-<section data-x id="siteWorks" class="portfolio">
-    <h2>作品集</h2>
-    <div id="mySlides">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <img src="/img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
-                <img src="/img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
-                <img src="/img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
-            </div>
-            <!-- 如果需要分页器 -->
-            <div class="swiper-pagination"></div>
+                </a>
+            </footer>
         </div>
+        <p class="downloadResume-wrapper">
+            <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
+        </p>
+        <p class="intro">
+            王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
+        </p>
+
+    </main>
+    <section data-x id="siteSkill" class="skills">
+        <h2>技能</h2>
+        <ol class="clearfix">
+            <li>
+                <h3>
+                    HTML 5 &amp; CSS 3
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    JavaScript
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 50%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    jQuery
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Vue.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 40%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    React.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 50%"></div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Node.js
+                </h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 60%"></div>
+                </div>
+            </li>
+        </ol>
+    </section>
+    <section data-x id="siteWorks" class="portfolio">
+        <h2>作品集</h2>
+        <div id="mySlides">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <img src="/img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
+                    <img src="/img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
+                    <img src="/img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
+                </div>
+                <!-- 如果需要分页器 -->
+                <div class="swiper-pagination"></div>
+            </div>
             <!-- 如果需要导航按钮 -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-    </div>
-</section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
-<script src="./js/init-swiper.js"></script>
-<script>
-        // 加载动画用
-        // setTimeout(function() {
-        // 	siteWelcome.classList.remove("active")
-        // }, 1500)
+        </div>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
+    <script src="./js/init-swiper.js"></script>
+    <script src="./js/auto-slide-up.js"></script>
+    <script src="./js/smoothly-navigation.js"></script>
+    <script src="./js/sticky-topbar.js"></script>
+</body>
 
-        window.onscroll = function() {
-            if (window.scrollY > 0) {
-                topNavBar.classList.add("sticky")
-            } else {
-                topNavBar.classList.remove("sticky")
-            }
-            findClosest()
-        }
-
-        function findClosest() {
-            let specialTags = document.querySelectorAll('[data-x]')
-            let minIndex = 0
-            for (let i = 1; i < specialTags.length; i++) {
-                if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
-                    minIndex = i
-                }
-            }
-            // minIndex 就是里窗口顶部最近的元素
-            specialTags[minIndex].classList.remove('offset')
-            let id = specialTags[minIndex].id
-            let a = document.querySelector('a[href="#' + id + '"]')
-            let li = a.parentNode
-            let brothersAndMe = li.parentNode.children
-            for (let i = 0; i < brothersAndMe.length; i++) {
-                brothersAndMe[i].classList.remove('highlight')
-            }
-            li.classList.add('highlight')
-        }
-
-        let liTags = document.querySelectorAll('nav.menu > ul >li')
-
-        for (let i = 0; i < liTags.length; i++) {
-            liTags[i].onmouseenter = function(x) {
-                x.currentTarget.classList.add('active')
-            }
-            liTags[i].onmouseleave = function(x) {
-                x.currentTarget.classList.remove('active')
-            }
-        }
-
-        let aTags = document.querySelectorAll('nav.menu > ul > li > a')
-
-        function animate(time) {
-            requestAnimationFrame(animate);
-            TWEEN.update(time);
-        }
-
-        requestAnimationFrame(animate);
-
-        for (let i = 0; i < aTags.length; i++) {
-            aTags[i].onclick = function(x) {
-                x.preventDefault()
-                let a = x.currentTarget
-                let href = a.getAttribute('href') //'#siteAbout'
-                let element = document.querySelector(href)
-                let top = element.offsetTop
-                let currentTop = window.scrollY
-                let targetTop = top - 80
-                let s = targetTop - currentTop // 路程
-                var coords = {
-                    y: currentTop
-                }; // 起始位置
-                var t = Math.abs((s / 100) * 300) // 时间
-                if (t > 500) {
-                    t = 500
-                }
-                var tween = new TWEEN.Tween(coords) // 起始位置
-                .to({
-                    y: targetTop
-                    }, t) // 结束位置 和 时间
-                    .easing(TWEEN.Easing.Cubic.InOut) // 缓动类型
-                    .onUpdate(function() {
-                        // coords.y 已经变了
-                        window.scrollTo(0, coords.y) // 如何更新界面
-                    })
-                    .start(); // 开始缓动
-                }
-            }
-        </script>
-    </body>
-
-    </html>
+</html>
