修正图片路径

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         <div id="mySlides">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <img src="/img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
-                    <img src="/img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
-                    <img src="/img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
+                    <img src="./img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
+                    <img src="./img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
+                    <img src="./img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
                 </div>
                 <!-- 如果需要分页器 -->
                 <div class="swiper-pagination"></div>
