--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a class="logo" href="#" alt="logo">
-                <span class="rs">RS</span><span class="card">card</span>
+                <span class="rs">W·Z</span>
             </a>
             <nav class="menu">
                 <ul class="clearfix">
@@ -63,17 +63,17 @@
                 </div>
                 <div class="text">
                     <div class="profile">
-                        <span class="welcome">Hello
+                        <span class="welcome">Hello World
                           <span class="triangle"></span>
                         </span>
                         <h1>王峥</h1>
-                        <p>前端开发工程师</p>
+                        <p>前端开发工程师，熟悉HTML5/CSS3/JavaScript/Vue</p>
                         <hr>
                         <dl>
                             <dt>年龄</dt>
-                            <dd>26</dd>
+                            <dd>27</dd>
                             <dt>所在城市</dt>
-                            <dd>北京</dd>
+                            <dd>天津</dd>
                             <dt>邮箱</dt>
                             <dd>w87344666@gmail.com</dd>
                             <dt>手机</dt>
@@ -113,10 +113,6 @@
         <p class="downloadResume-wrapper">
             <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
         </p>
-        <p class="intro">
-            王峥， 前端工程师。<br> 技能：前端开发，Vue 开发，Node.js 开发
-        </p>
-
     </main>
     <section data-x id="siteSkill" class="skills">
         <h2>技能</h2>
