--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <title>王峥的个人简历</title>
     <script src="//at.alicdn.com/t/font_584946_dxln77t6o7sqbyb9.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/js/swiper.min.js"></script>
+    <script src="https://cdn.bootcss.com/Swiper/4.4.2/js/swiper.min.js"></script>
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/css/swiper.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/4.4.2/css/swiper.min.css">
 </head>
 
 <body>
@@ -195,7 +195,7 @@
             <input type="submit" value="提交">
         </form>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
+    <script src="https://cdn.bootcss.com/tween.js/r14/Tween.min.js"></script>
     <script src="//cdn1.lncld.net/static/js/3.6.8/av-min.js"></script>
     <script src="./js/message.js"></script>
     <script src="./js/init-swiper.js"></script>
