完善简历作品链接

--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
                     </li>
                     <li>
                         <a href="#siteWorks">作品</a>
-                        <ul class="submenu">
-                            <li><a href="">作品1</a></li>
-                            <li><a href="">作品2</a></li>
-                            <li><a href="">作品3</a></li>
-                        </ul>
                     </li>
                     <li>
                         <a href="#">博客</a>
@@ -83,12 +78,12 @@
                 </div>
             </div>
             <footer class="media">
-                <a href="#">
+                <a href="https://varonia.github.io">
                     <svg class="icon" aria-hidden="true">
                  <use xlink:href="#icon-hexo"></use>
              </svg>
                 </a>
-                <a href="#">
+                <a href="https://github.com/Varonia">
                     <svg class="icon" aria-hidden="true">
              <use xlink:href="#icon-github"></use>
          </svg>
@@ -98,12 +93,12 @@
          <use xlink:href="#icon-weibo1"></use>
      </svg>
                 </a>
-                <a href="#">
+                <a href="https://www.zhihu.com">
                     <svg class="icon" aria-hidden="true">
      <use xlink:href="#icon-zhihu0"></use>
  </svg>
                 </a>
-                <a href="#">
+                <a href="https://twitter.com/Dea_w87344666">
                     <svg class="icon" aria-hidden="true">
      <use xlink:href="#icon-twitter"></use>
  </svg>
@@ -151,7 +146,7 @@
             </li>
             <li>
                 <h3>
-                    React.js
+                    SASS
                 </h3>
                 <div class="progressBar">
                     <div class="progress" style="width: 50%"></div>
@@ -162,7 +157,7 @@
                     Node.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress" style="width: 60%"></div>
+                    <div class="progress" style="width: 40%"></div>
                 </div>
             </li>
         </ol>
@@ -172,9 +167,15 @@
         <div id="mySlides">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <img src="./img/works/bookmark.jpg" alt="加载失败" class="swiper-slide" width="668">
-                    <img src="./img/works/canvas.png" alt="加载失败" class="swiper-slide" width="668">
-                    <img src="./img/works/apple-style-slides.jpg" alt="加载失败" class="swiper-slide" width="668">
+                    <a href="https://varonia.github.io/myBookmarks/index.html" class="swiper-slide" target="_blank">
+                        <img src="./img/works/bookmark.jpg" alt="加载失败" width="668">
+                    </a>
+                    <a href="https://varonia.github.io/mySketchpad/" class="swiper-slide" target="_blank">
+                        <img src="./img/works/canvas.png" alt="加载失败" width="668">
+                    </a>
+                    <a href="http://js.jirengu.com/sipib/11/" class="swiper-slide" target="_blank">
+                        <img src="./img/works/apple-style-slides.jpg" alt="加载失败" width="668">
+                    </a>
                 </div>
                 <!-- 如果需要分页器 -->
                 <div class="swiper-pagination"></div>
