--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">日历</a>
-                    </li>
-                    <li>
-                        <a href="#">联系方式</a>
+                        <a href="#siteAbout">联系方式</a>
                     </li>
                     <li>
                         <a href="#">其他</a>
